# gym_api

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 587c76a69abe_add_user_model.py  93c23b67f97a_.py  c19b14ab960c_.py
app/: database.py  main.py
app/api/: api.py
app/api/endpoints/: user.py  workout.py
app/core/: settings.py
app/cruds/: __init__.py  user.py  workout.py
app/db/: base.py  config.py  connection.py  session.py
app/models/: __init__.py  base.py  user.py  workout.py
app/schemas/: __init__.py  error.py  user.py
app/workout/: crud.py  mock.py  models.py  router.py  schema.py  view.py
