[tool.poetry]
name = "gym-api"
version = "0.1.0"
description = ""
authors = ["jeonghoonyu <moning02004@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.8.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
